<resources>
    <string name="app_name">ApPEX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_legends">Legends</string>
    <string name="menu_weapon">Weapon</string>
    <string name="menu_heirloom">Heirloom</string>
    <string name="menu_user">User</string>
    <string name="menu_rank">Rank</string>
    <string name="login">Login</string>

    <string-array name="platform">
        <item>PS4</item>
        <item>XBOX</item>
        <item>PC</item>
    </string-array>

</resources>