<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_user"/>
        <item
            android:id="@+id/nav_legends"
            android:icon="@drawable/ic_menu_legends"
            android:title="@string/menu_legends" />
        <item
            android:id="@+id/nav_weapon"
            android:icon="@drawable/ic_menu_weapon"
            android:title="@string/menu_weapon" />
        <item
            android:id="@+id/nav_heirloom"
            android:icon="@drawable/ic_menu_heirloom"
            android:title="@string/menu_heirloom" />
        <item
            android:id="@+id/nav_rank"
            android:icon="@drawable/ic_menu_rank"
            android:title="@string/menu_rank"/>
    </group>
</menu>