<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"

    app:startDestination="@+id/nav_user">

    <fragment
        android:id="@+id/nav_legends"
        android:name="it.unimol.appex.ui.legends.LegendsFragment"
        android:label="@string/menu_legends"
        tools:layout="@layout/fragment_legends" />

    <fragment
        android:id="@+id/nav_weapon"
        android:name="it.unimol.appex.ui.weapon.WeaponFragment"
        android:label="@string/menu_weapon"
        tools:layout="@layout/fragment_weapon" />

    <fragment
        android:id="@+id/nav_heirloom"
        android:name="it.unimol.appex.ui.heirloom.HeirloomFragment"
        android:label="@string/menu_heirloom"
        tools:layout="@layout/fragment_heirloom" />

    <fragment
        android:id="@+id/nav_user"
        android:name="it.unimol.appex.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user"/>

    <fragment
        android:id="@+id/nav_rank"
        android:name="it.unimol.appex.ui.rank.RankFragment"
        android:label="@string/menu_rank"
        tools:layout="@layout/fragment_user" />

</navigation>